--- a/member.html
+++ b/member.html
@@ -42,6 +42,8 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
+        <p>わかばかばかばわかばわか</p>
+        <p>Lorem ipsum dolor sit amet.</p>
       </div>
     </div>
 
