--- a/member.html
+++ b/member.html
@@ -44,6 +44,7 @@
         <img src="images/icon_wakaba.jpg" alt="わかば">
         <p>わかばかばかばわかばわか</p>
         <p>Lorem ipsum dolor sit amet.</p>
+        <p>よくわからん</p>
       </div>
     </div>
 
